--- a/application-properties/product-search-service.properties
+++ b/application-properties/product-search-service.properties
@@ -2,10 +2,9 @@
 server.port=9956
 
 # User Defined Properties
-es.jms.topic.product-create=ES_TOPIC_PRODUCT_CREATE
-es.jms.topic.product-update=ES_TOPIC_PRODUCT_UPDATE
 es.jms.topic.subscriber.product-create=ES_T_SUBSCRIPTION_PRODUCT_CREATE
 es.jms.topic.subscriber.product-update=ES_T_SUBSCRIPTION_PRODUCT_UPDATE
+es.jms.topic.subscriber.product-delete=ES_T_SUBSCRIPTION_PRODUCT_DELETE
 
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
